--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,9 +24,8 @@
         </activity>
         <activity android:name=".other_activity.configuration" />
 
-        <service android:name=".core_functions.ListenService">
-
-        </service>
+        <service android:name=".core_functions.ListenService"/>
+        <service android:name=".core_function_2.ReplyService"/>
     </application>
 
 </manifest>
